fix product title cyrillic overflow

--- a/src/styles/partials/product-list.scss
+++ b/src/styles/partials/product-list.scss
@@ -143,6 +143,7 @@
 }
 
 .product-item__title {
+  padding-top: 5px;
   margin-bottom: 5px;
   font-size: 18px;
   line-height: 18px;
